// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/openapi/openapi Array of binary binary array all options 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "bin array (minItems:10, maxItems:20)",
            "example": [
              "c2FtcGxlMQ==",
            ],
            "in": "query",
            "name": "base64string",
            "required": true,
            "schema": {
              "default": [
                "c2FtcGxlMQ==",
              ],
              "description": "bin array (minItems:10, maxItems:20)",
              "items": {
                "description": "some binary base64 value (min:512 chars, max:1024 chars, binary string)",
                "format": "binary",
                "type": "string",
              },
              "maxItems": 20,
              "minItems": 10,
              "nullable": true,
              "type": "array",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Array of binary binary array simple 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "Parameter without description.",
            "in": "query",
            "name": "binaryArray",
            "required": false,
            "schema": {
              "description": "Parameter without description.",
              "items": {
                "description": "Parameter without description. (binary string)",
                "format": "binary",
                "type": "string",
              },
              "type": "array",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;
